add more configuration options for base pleroma prod.secret.exs

--- a/templates/prod.secret.exs.erb
+++ b/templates/prod.secret.exs.erb
@@ -1,11 +1,11 @@
 use Mix.Config
 
 config :pleroma, Pleroma.Web.Endpoint,
-  http: [port: 4000],
-  protocol: "http",
-  debug_errors: true,
-  code_reloader: true,
-  check_origin: false,
+  http: [port: <%= @pleroma[:port] %>],
+  protocol: "<%= @pleroma[:protocol] %>",
+  debug_errors: <%= @pleroma[:debug_errors] %>,
+  code_reloader: <%= @pleroma[:code_reloader] %>,
+  check_origin: <%= @pleroma[:check_origin] %>,
   secret_key_base: "<%= @pleroma[:secret_key] %>",
   watchers: []
 
@@ -15,32 +15,33 @@ config :pleroma, Pleroma.Repo,
   password: "<%= @pleroma[:db_password] %>",
   database: "<%= @pleroma[:db_database] %>",
   hostname: "<%= @pleroma[:db_hostname] %>",
-  pool_size: 8
+  pool_size: "<%= @pleroma[:db_pool_size] %>"
 
 config :pleroma, Pleroma.Web.Endpoint,
-  url: [host: "<%= @pleroma[:hostname] %>", scheme: "https", port: 443]
+  url: [
+        host: "<%= @pleroma[:hostname] %>", 
+        scheme: "<%= @pleroma[:url_scheme] %>", 
+        port: <%= @pleroma[:url_port] %>
+      ]
 
 config :pleroma, :instance,
   name: "<%= @pleroma[:hostname] %>",
   email: "<%= @pleroma[:email] %>",
-  description: "",
-  limit: 1000,
-  upload_limit: 16_000_000
+  description: "<%= @pleroma[:description] %>",
+  limit: "<%= @pleroma[:limit] %>",
+  upload_limit: "<%= @pleroma[:upload_limit] %>",
+  registrations_open: <%= @pleroma[:registrations_open] %>,
+  federating: <%= @pleroma[:federating] %>,
+  rewrite_policy: "<%= @pleroma[:rewrite_policy] %>",
+  finmoji_enabled: <%= @pleroma[:finmoji_enabled] %>,
+  extended_nickname_format: <%= @pleroma[:extended_nickname_format] %>,
+  autofollowed_nicknames: "<%= @pleroma[:autofollowed_nicknames] %>"
 
 config :logger,
   :console, format: "[$level] $message\n",
-  level: :debug
+  level: :<%= @pleroma[:log_level] %>
 
-config :pleroma, :mrf_simple,
-  media_removal: ["pawoo.net", "mstdn.jp"],
-  media_nsfw: ["switter.at", "kinky.business"],
-  federated_timeline_removal: ["pawoo.net", "mstdn.jp"],
-  reject: ["freezepeach.xyz", "pl.smuglo.li", "pleroma.rareome.ga", "girlcock.club" ]
-
-config :pleroma, :chat, enabled: false
-
-config :pleroma, Pleroma.Upload, filters: [Pleroma.Upload.Filter.Mogrify, Pleroma.Upload.Filter.Dedupe, Pleroma.Upload.Filter.AnonymizeFilename]
-
-config  :pleroma, Pleroma.Upload.Filter.Mogrify, args: "strip"
+config :pleroma, :chat, 
+  enabled: <%= @pleroma[:chat_enabled] %>
 
 import_config "extra/*"
