--- a/templates/prod.secret.exs.erb
+++ b/templates/prod.secret.exs.erb
@@ -44,4 +44,8 @@ config :logger,
 config :pleroma, :chat, 
   enabled: <%= @pleroma[:chat_enabled] %>
 
+config :pleroma, Pleroma.Web.Metadata,
+  providers: [Pleroma.Web.Metadata.Providers.OpenGraph, Pleroma.Web.Metadata.Providers.TwitterCard],
+  unfurl_nsfw: <%= @pleroma[:unfurl_nsfw] %>
+
 import_config "extra/*"
