--- a/templates/upstart/upstart.sh.erb
+++ b/templates/upstart/upstart.sh.erb
@@ -3,6 +3,6 @@
 export MIX_ENV=prod
 export HOME=<%= @config[:path] %>
 cd <%= @config[:path] %>
-/usr/local/bin/mix compile
-/usr/local/bin/mix ecto.migrate
-/usr/local/bin/mix phx.server
+/usr/bin/mix compile
+/usr/bin/mix ecto.migrate
+/usr/bin/mix phx.server
